--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>MUSINSA</title>
+  <title>MUSINSA_1</title>
   <script defer src="js/jquery-3.7.1.js"></script>
   <script defer src="js/script.js"></script>
   <link rel="stylesheet" href="css/style.css">
